--- a/FrontEnd/src/components/createUser/create.css
+++ b/FrontEnd/src/components/createUser/create.css
@@ -1,4 +1,3 @@
- 
 #create {
     background: white;
     width: 100%;
@@ -8,18 +7,15 @@
 }
 
 #cardHead {
-    background: white
+    background: white;
 }
 
 #alert {
     margin-bottom: 10px;
     text-align: center;
     padding-bottom: 5px;
+    padding-top: 5px;
     display: block;
-}
-
-#message {
-    font-size: 12px;
 }
 
 #container {
