--- a/FrontEnd/src/components/createUser/createUser.css
+++ b/FrontEnd/src/components/createUser/createUser.css
@@ -7,18 +7,15 @@
 }
 
 #cardHead {
-    background: white
+    background: white;
 }
 
 #alert {
     margin-bottom: 10px;
     text-align: center;
     padding-bottom: 5px;
+    padding-top: 5px;
     display: block;
-}
-
-#message {
-    font-size: 12px;
 }
 
 #container {
@@ -30,19 +27,8 @@
     width: 25%;
     display: block;
     border-radius: 30px;
-    margin-top: 5%;
-    margin-bottom: -30px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-}
-
-#taskalertHead {
-    width: 25%;
-    display: block;
-    border-radius: 30px;
-    margin-top: 2%;
-    margin-bottom: 15px;
+    margin-top: 4%;
+    margin-bottom: -50px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
