--- a/FrontEnd/src/components/homePage/CompletedTask.css
+++ b/FrontEnd/src/components/homePage/CompletedTask.css
@@ -23,6 +23,8 @@
   font-style: bold;
   padding-left: 2%;
   padding-right: 2%;
+  cursor: pointer;
+
 }
 .stickys{
   background-color: white !important	 ;
@@ -35,6 +37,8 @@
       margin-left: 9px;
       margin-bottom: 25%; 
       margin-top: 10%;
+      cursor: pointer;
+
 
     }
 .rowCss{
@@ -91,6 +95,8 @@ and (-webkit-min-device-pixel-ratio: 1) {
       margin-bottom: -22%;
       position: relative;
       margin-top: 13%;
+      cursor: pointer;
+
     }
   }
   @media screen 
@@ -102,7 +108,9 @@ and (-webkit-min-device-pixel-ratio: 1) {
     margin-left: 60%;
     margin-bottom: -22%;
     position: relative;
-    margin-top: 13%
+    margin-top: 13%;
+    cursor: pointer;
+
   }
   }
   @media screen 
