--- a/FrontEnd/src/components/homePage/HomePage.css
+++ b/FrontEnd/src/components/homePage/HomePage.css
@@ -125,10 +125,14 @@ html,body{
         margin-bottom: -10%;
         margin-right: 76%;
         position: relative;
+        cursor: pointer;
+
       }
       .a{
-        margin-left: 65%;
+        margin-left: 69%;
         margin-bottom: -11%;
+        cursor: pointer;
+
       }
   }
   @media screen 
@@ -139,10 +143,13 @@ html,body{
       margin-bottom: -14%;
       margin-right: 76%;
       position: relative;
+      cursor: pointer;
     }
     .a{
       margin-left: 65%;
       margin-bottom: -14%;
+      cursor: pointer;
+
     }
 }
     .comp{
@@ -157,7 +164,7 @@ html,body{
       background-color: white;
       outline: none;
       color: rgb(32, 155, 236);
-      padding: 8px 16px;
+      padding: 6px 16px;
       background-color: inherit;
       font-family: inherit;
       margin: 0;
