--- a/FrontEnd/src/components/createUser/myprofile.css
+++ b/FrontEnd/src/components/createUser/myprofile.css
@@ -1,20 +1,3 @@
-/* #myprofile {
-    margin-top: 20px; 
-    background-color:#ebebeb;
-     border-radius: 24px;
-     margin-bottom: 20px
-}
-
-
-.input-group-prepend {
-    margin-right: -1px;
-    display : flex;
-}
-
-.h5{
-    margin-top: 5px;
-    margin-left: 20px;
-} */
 
 #myprofile {
     margin-top: 20px; 
@@ -39,3 +22,10 @@
 .h3{
     color:gray;
 }
+#content-wrap {
+    padding-bottom: 5.5rem;    /* Footer height */
+  }
+  #form-container {
+    position: relative;
+    min-height: 93vh;
+  }
