--- a/FrontEnd/src/components/createUser/myprofile.css
+++ b/FrontEnd/src/components/createUser/myprofile.css
@@ -16,16 +16,20 @@
     margin-top: 5px;
     margin-left: 20px;
 }
-.h4{
+.h44{
     color:black;
+    font-style:  'Courier New', Courier, monospace;
 }
-.h3{
+.h33{
     color:gray;
+    font-family:  'Courier New', Courier, monospace;
 }
+
 #content-wrap {
-    padding-bottom: 5.5rem;    /* Footer height */
+    padding-bottom: 2.5rem;    /* Footer height */
   }
-  #form-container {
+  
+  #profile-container {
     position: relative;
-    min-height: 93vh;
+    min-height: 85vh;
   }
