--- a/FrontEnd/src/components/createTask/home.css
+++ b/FrontEnd/src/components/createTask/home.css
@@ -25,7 +25,7 @@ margin: auto;
 }
 
 .footer { 
-  position: relative;
+  position: absolute;
   left: 0;
   bottom: 0;
   background-color: #343A40;
