--- a/FrontEnd/src/components/homePage/HomePage.css
+++ b/FrontEnd/src/components/homePage/HomePage.css
@@ -9,15 +9,13 @@ html,body{
        
     * {
         box-sizing: border-box;
-
       }
       
      .cards{
       height: 720 !important;
       border: 1px solid gray; 
-      background-color: #e0ffff;
+      background-color: #5f999927;
       box-shadow: 5px 10px 18px #888888;
-
      }
 
      .header{
@@ -37,9 +35,11 @@ html,body{
       padding: 5px;
       font-size: 18px;
       color: black;
-      grid-row-end: 20px;
-      resize: none;
+    resize: none;
       border: none white;
+      cursor: pointer;
+      height: 55px !important;
+
     }
   
     .prHigh{
@@ -58,7 +58,7 @@ html,body{
     }
     .prLow{
       background-color: white !important	 ;
-        border-top: 25px solid rgb(232, 241, 144) !important;
+        border-top: 25px solid  rgb(188, 241, 144) !important;
         border-radius: 15px 10px 0px 0px;
         box-shadow: 5px 10px 18px #888888;
 
@@ -68,15 +68,13 @@ html,body{
         margin-left: -6px;
         margin-bottom: 25%;
         cursor: pointer;
-
       }
       .letter{
         margin-top: -6px !important;
-
   }
     .prInit{
       background-color: white !important	 ;
-      border-top: 25px solid rgb(188, 241, 144) !important;
+      border-top: 25px solid  rgb(232, 241, 144) !important;
       border-radius: 15px 10px 0px 0px;
       box-shadow: 5px 10px 18px #888888;
       height: 120px !important;
@@ -112,10 +110,6 @@ html,body{
    }
 
 
-    textarea{
-      height: 83px !important;
-
-    }
    
     @media screen 
     and (min-device-width: 1200px) 
@@ -213,4 +207,7 @@ html,body{
       display: block;
     }
 
-   
+    .arrow{
+      margin-right: 73%;
+
+    }
