--- a/FrontEnd/src/components/Architect/homepage.css
+++ b/FrontEnd/src/components/Architect/homepage.css
@@ -1,3 +1,8 @@
+
+.option{
+    font-size: 131%;
+}
+
 .cssCard{
     border: 1px solid #F4F5F7;
     height: 950px;
@@ -7,6 +12,8 @@
 .iconTask{
     padding-top: 18px;
     padding-bottom: 18px;
+    color: black;
+
 }
 .option{
     font-size: 131%;
