--- a/FrontEnd/src/components/homePage/HomePage.css
+++ b/FrontEnd/src/components/homePage/HomePage.css
@@ -86,7 +86,17 @@ html,body{
       margin-left: -6px;
       margin-bottom: 25%; 
       cursor: pointer;
-
+    }
+    @media (min-width: 53px) and (max-width: 1100px){
+      .prHigh{
+        height: 100% !important;
+        width: 100%;
+        
+        margin-left: 0px;
+        
+  
+  
+      }
     }
     .prCri{
       background-color: white !important	 ;
@@ -131,7 +141,7 @@ html,body{
       }
       .a{
         margin-left: 69%;
-        margin-bottom: -11%;
+        margin-bottom: -8%;
         cursor: pointer;
 
       }
